--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-theme: cayman
+title: [Popster]
+description: [mobile game]
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
